# boop

./: .dockerignore  .editorconfig  Dockerfile.linux  README.md  index.html  package-lock.json  package.json  playwright.config.js  vitest.config.js
.github/workflows/: release.yml  test.yml
docs/: audio-codecs.md  boop_blob_sync_design.md  event-architecture.md  protocols.md
e2e/: boop.spec.js
scripts/: audit-system-deps.sh  build-linux.sh  check-deps.js  generate-icon.js  setup.sh  smoke-test-all.sh  smoke-test.sh  sync-version.js  test-dmg.sh
src/: App.jsx  App.test.jsx  audio.js  audio.test.js  index.jsx  main.js  style.css  tauri-bridge.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/boop-core/: Cargo.toml
src-tauri/boop-core/src/: address_book.rs  engine.rs  events.rs  invite_ticket.rs  iroh_boops.rs  iroh_manager.rs  lib.rs  player.rs  tests.rs
src-tauri/boop-core/tests/: integration_test.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AddFriendView.jsx  InviteFriendView.jsx  JoinFriendView.jsx  MyTicketView.jsx
test/e2e/: boop.spec.js
