[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
boop-core = { path = "boop-core" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.32"
uuid = { version = "1.10", features = ["v4", "serde"] }
anyhow = "1.0"
rodio = { version = "0.20", features = ["symphonia-all"] }
async-trait = "0.1"
[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSWindow"] }

# fix mic permissions on linux. see: https://github.com/olizilla/boop/issues/2
[target."cfg(target_os = \"linux\")".dependencies]
webkit2gtk = { version = "2.0.1", features = ["v2_38"] }

[workspace]
members = [
  "boop-core",
]
