[package]
name = "boop-core"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = { version = "0.97", features = ["address-lookup-mdns"] }
iroh-docs = "0.97"
iroh-blobs = "0.99"
iroh-gossip = "0.97"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
n0-future = "0.3"
bytes = "1"
rand = "0.9.2"
tempfile = "3.20.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
log = "0.4"
 
[dev-dependencies]
serial_test = "3.1"
