[package]
name = "boop-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
iroh = { version = "1.0.0-rc.0", features = ["test-utils"] }
iroh-docs = "0.99"
iroh-blobs = "0.101"
iroh-gossip = "0.99"
iroh-mdns-address-lookup = "0.2"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
hound = "3.5"
flacenc = "0.4"
n0-future = "0.3"
bytes = "1"
rand = "0.9.2"
tempfile = "3.20.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
log = "0.4"
 
[dev-dependencies]
serial_test = "3.1"
